--- a/Home.html
+++ b/Home.html
@@ -27,7 +27,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-header u-header" id="sec-d989"><div class="u-clearfix u-sheet u-sheet-1"></div></header>
+  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-d989"><div class="u-clearfix u-sheet u-sheet-1"></div></header>
     <section class="u-clearfix u-section-1" id="sec-70d0">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-custom-font u-font-arial u-text u-text-default u-title u-text-1">CTFUclient</h1>
