--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <br>Özledim seni harbiden<br>Aklıma da düşüverir aniden<br>İçince, açılınca
         </p>
         <img src="images/779686530230517780.png" alt="" class="u-image u-image-default u-preserve-proportions u-image-3" data-image-width="96" data-image-height="128">
-        <blockquote class="u-custom-font u-font-arial u-text u-text-3">Sample quote. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</blockquote>
+        <blockquote class="u-text u-text-3">Sample quote. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</blockquote>
         <p class="u-custom-font u-font-courier-new u-text u-text-black u-text-4">INT. STRONGHOLD - UNKNOWN
 KÖPEK GÖRÜNÜMLÜ karakter (AHMEWT) gözlerle kaplı portalın
 kenarında eğilmiş bir şekilde durmaktadır. Portalın içine
@@ -97,7 +97,7 @@ ANANI SIIEND.</p>
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-e6f9"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">real tm ltdi aş şti tüm haklar topluma açıktır</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
